--- a/views/ideas/edit.hbs
+++ b/views/ideas/edit.hbs
@@ -1,7 +1,7 @@
 <form action="/ideas/{{idea.id}}?_method=PUT" method="POST">
     <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" name="title" class="form-control" id="title" value="{{idea.title}}"
+        <input type="text" name="title" class="form-control" id="title" value="{{idea.title}}">
     </div>
     <div class="form-group">
         <label for="description">Description</label>
@@ -20,6 +20,11 @@
             </option>
         </select>
     </div>
+    <div class="form-group">
+        <label for="tags">Tags</label>
+        <input type="text" name="tags" class="form-control" 
+        id="tags" data-role="tagsinput" value="{{idea.tags}}">
+    </div>
     <div class="form-check">
         <input type="checkbox" name="allowComments" class="form-check-input"
           id="allowComments" 
@@ -29,6 +34,7 @@
         <label for="allowComments" class="form-check-label">AllowComments</label>
 
     </div>
+    <button disabled style="display: none;" class="btn btn-primary mt-3" type="submit">update idea</button>
     <button class="btn btn-primary mt-3" type="submit">Update Idea</button>
 
 </form>
