--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,9 +16,9 @@
 <body>
 
   {{>_nav}}
-  
+
   <div class="container pt-4">
-    {{>_errorMsg}}
+    {{>_msg}}
     {{{body}}}
   </div>
 
@@ -30,21 +30,25 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+  </script>
+  <script src="/bootstrap-taginput.js"></script>
 
 
 </body>
 <script>
+  const el = document.querySelector('#description')
+  if (el) {
     ClassicEditor
-        .create( document.querySelector( '#description' ),{
-        toolbar: [ 'heading', '|', 'bold', 'italic', 'link', 'bulletedList', 
-        'numberedList', 'blockQuote' ],       
-         })
-        .catch( error => {
-            console.error( error );
-        });
+      .create(el, {
+        toolbar: ['heading', '|', 'bold', 'italic', 'link', 'bulletedList',
+          'numberedList', 'blockQuote'],
+      })
+      .catch(error => {
+        console.error(error);
+      });
+  }
+
 </script>
 
 </html>
