--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -1,22 +1,49 @@
 <div class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="/">IdeaApp</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/ideas">Public Ideas</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="/ideas/new">Add Idea</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="/about">About</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container">
+    <a class="navbar-brand" href="/">IdeaApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        {{#if user}}
+        <li class="nav-item {{comparePath '/ideas' path}}">
+          <a class="nav-link" href="/ideas">Public Ideas</a>
+        </li>
+        <li class="nav-item {{comparePath '/ideas/new' path}}">
+          <a class="nav-link" href="/ideas/new">Add Idea</a>
+        </li>
+        <li class="nav-item {{comparePath '/auth/logout' path}}">
+          <a class="nav-link" href="/auth/logout">LogOut</a>
+        </li>
+        <li class="nav-item {{comparePath '/about' path}}">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item {{comparePath '/contact' path}}">
+          <a class="nav-link" href="/contact">Contact us</a>
+        </li>
+        {{else}}
+        <li class="nav-item {{comparePath '/ideas' path}}">
+          <a class="nav-link" href="/ideas">Public Ideas</a>
+        </li>
+        <li class="nav-item {{comparePath '/auth/register' path}}">
+          <a class="nav-link" href="/auth/register">Register</a>
+        </li>
+        <li class="nav-item {{comparePath '/auth/login' path}}">
+          <a class="nav-link" href="/auth/login">Login</a>
+        </li>
+        <li class="nav-item {{comparePath '/about' path}}">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item {{comparePath '/contact' path}}">
+          <a class="nav-link" href="/contact">Contact us</a>
+        </li>
+        {{/if}}
+
+
+
+      </ul>
     </div>
   </div>
+</div>
