--- a/views/comments/new.hbs
+++ b/views/comments/new.hbs
@@ -1,15 +1,16 @@
 <div class="card">
     <h5 class="card-header">{{idea.title}}</h5>
     <div class="card-body">
-        <form action="/ideas/{{idea.id}}/comments" method="POST">
+        <form action="/ideas/{{idea._id}}/comments" method="POST">
             <div class="form-group">
-                <input type="text" name="title" class="form-control" placeholder="Title of Your comment">
+                <input type="text" name="title" class="form-control" placeholder="Title of Your comment" 
+                >
             </div>
             <div class="form-group">
-                <textarea name="text" class="form-control" placeholder="Write more"></textarea>
+                <textarea name="text" class="form-control" placeholder="Write more"></textarea>  
             </div>
             <input type="submit" class="btn btn-primary" value="Add Comment">
         </form>
-        <a href="/ideas/{{idea.id}}" class="btn btn-info mt-3">Back to Idea</a>
+        <a href="/ideas/{{idea._id}}" class="btn btn-info mt-3">Back to Idea</a>
     </div>
 </div>
