--- a/views/comments/edit.hbs
+++ b/views/comments/edit.hbs
@@ -2,12 +2,13 @@
     <h5 class="card-header">{{idea.title}}</h5>
     <div class="card-body">
 
-        <form action="/ideas/{{idea.id}}/comments/{{id}}/edit?_method=PUT" method="POST">
+        <form action="/ideas/{{idea._id}}/comments/{{comment._id}}?_method=PUT" method="POST">
             <div class="form-group">
-                <input type="text" name="title" class="form-control" placeholder="Title of Your comment" value="{{title}}">
+                <input type="text" name="title" class="form-control" placeholder="Title of Your comment" 
+                 value="{{comment.title}}">
             </div>
             <div class="form-group">
-                <textarea name="text" class="form-control" placeholder="Write more">{{text}}</textarea>
+                <textarea name="text" class="form-control" placeholder="Write more">{{comment.text}}</textarea>
             </div>
             <input type="submit" class="btn btn-primary" value="Update">
         </form>
