--- a/views/ideas/edit.hbs
+++ b/views/ideas/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/ideas/{{idea.id}}?_method=PUT" method="POST">
+<form action="/ideas/{{idea._id}}?_method=PUT" method="POST">
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" value="{{idea.title}}">
@@ -12,14 +12,26 @@
         <label for="status">Status</label>
         <select name="status" id="status">
 
-            <option value="public" {{compareValues "public" idea.status}}>
+            <option value="public" {{compareValues "public" idea.status 'select'}}>
                 Public
             </option>
-            <option value="private" {{compareValues "private" idea.status}}>
+            <option value="private" {{compareValues "private" idea.status 'select'}}>
                 Private
             </option>
         </select>
     </div>
+
+    <div class="form-group">
+        <label for="categories">Categories</label>
+        <select name="categories" multiple class="form-control" id="categories">
+            {{#each ideaCategories}}
+            <option value="{{category}}" {{compareValues category categoryName 'select'}}>
+                {{category}}
+            </option>
+            {{/each}}
+        </select>
+      </div>
+
     <div class="form-group">
         <label for="tags">Tags</label>
         <input type="text" name="tags" class="form-control" 
