--- a/views/ideas/new.hbs
+++ b/views/ideas/new.hbs
@@ -15,14 +15,26 @@
     <div class="form-group">
         <label for="status">Status</label>
         <select name="status" id="status">
-            <option value="public" {{#if idea.status}} {{compareValues "public" idea.status}} {{/if}}>
+            <option value="public" {{#if idea.status}} {{compareValues "public" idea.status 'select'}} {{/if}}>
                 Public
             </option>
-            <option value="private" {{#if idea.status}} {{compareValues "private" idea.status}} {{/if}}>
+            <option value="private" {{#if idea.status}} {{compareValues "private" idea.status 'select'}} {{/if}}>
                 Private
             </option>
         </select>
     </div>
+
+  <div class="form-group">
+        <label for="categories">Categories</label>
+        <select name="categories" multiple class="form-control" id="categories">
+            {{#each categories}}
+            <option value="{{category}}">
+                {{category}}
+            </option>
+            {{/each}}
+        </select>
+    </div>
+
      <div class="form-group">
         <label for="tags">Tags</label>
         <input type="text" name="tags" class="form-control" 
