--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,6 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
   <script src="https://cdn.ckeditor.com/ckeditor5/22.0.0/classic/ckeditor.js"></script>
   <link rel="stylesheet" href="/style.css">
 </head>
@@ -33,6 +34,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
   </script>
   <script src="/bootstrap-taginput.js"></script>
+  <script src="/main.js"></script>
 
 
 </body>
