--- a/views/pages/index.hbs
+++ b/views/pages/index.hbs
@@ -1,2 +1,14 @@
-     <h1>{{text}}</h1>
-    
+<div class="jumbotron jumborton-fluid p-4">
+     <h1 class="display-4 mb-3">{{text}}</h1>
+      <p>In philosophy, ideas are usually taken as mental representational images of some object. Ideas can also be abstract
+    concepts that do not present as mental images. Many philosophers have considered ideas to be a fundamental
+    ontological category of being. The capacity to create and understand the meaning of ideas is considered to be an
+    essential and defining feature of human beings. In a popular sense, an idea arises in a reflexive, spontaneous
+    manner,
+    even without thinking or serious reflection, for example, when we talk about the idea of a person or a place. A new
+    or
+    original idea can often lead to innovation.</p>
+    <a href="/ideas" class="btn btn-primary btn-lg">Learn More</a>
+    <a href="/auth/register" class="btn btn-info btn-lg">Register for Share Idea</a>
+
+</div>    
