--- a/public/style.css
+++ b/public/style.css
@@ -66,3 +66,60 @@
 .profile li em {
   margin-right: 2em;
 }
+
+.categories .fa:hover {
+  cursor: pointer;
+}
+
+.idea h2 a {
+  text-decoration: none;
+  color: #333;
+}
+
+.like-btn:hover {
+  cursor: pointer;
+}
+
+.idea h2 a:hover {
+  color: #007bff;
+}
+
+.profile-image img {
+  width: 300px;
+  height: 300px;
+}
+
+.idea h2 {
+  position: relative;
+  z-index: 999;
+  color: rgb(35, 43, 43);
+  text-align: left;
+  padding-left: 0.2em;
+  line-height: 300px;
+  height: 300px;
+  width: 100%;
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.idea img {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0.8;
+  height: 300px;
+  z-index: -1;
+}
+
+@media only screen and (max-width: 991px) {
+  .idea h2 {
+    font-size: 2.5em !important;
+  }
+}
+
+@media only screen and (max-width: 765px) {
+  .idea h2 {
+    font-size: 1.5em !important;
+  }
+}
