--- a/views/ideas/edit.hbs
+++ b/views/ideas/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/ideas/{{idea._id}}?_method=PUT" method="POST">
+<form action="/ideas/{{idea._id}}?_method=PUT" method="POST" enctype="multipart/form-data">
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" value="{{idea.title}}">
@@ -44,8 +44,14 @@
           checked="true" 
           {{/if}}>
         <label for="allowComments" class="form-check-label">AllowComments</label>
-
     </div>
+
+    <br>
+    <div class="form-group">
+         <label for="ideaImage">Upload Feature Image to update existing one</label>
+         <input type="file" name="ideaImage" id="ideaImage" class="form-control">
+    </div>
+
     <button disabled style="display: none;" class="btn btn-primary mt-3" type="submit">update idea</button>
     <button class="btn btn-primary mt-3" type="submit">Update Idea</button>
 
