--- a/views/ideas/new.hbs
+++ b/views/ideas/new.hbs
@@ -1,4 +1,4 @@
-<form action="/ideas" method="POST">
+<form action="/ideas" method="POST" enctype="multipart/form-data">
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" {{#if idea.title}}
@@ -40,12 +40,18 @@
         <input type="text" name="tags" class="form-control" 
         id="tags" data-role="tagsinput">
     </div>
+
     <div class="form-check">
         <input type="checkbox" name="allowComments" class="form-check-input" id="allowComments"
             {{#if idea.allowComments}} 
             checked="true"
             {{/if}}/>
         <label for="allowComments" class="form-check-label">AllowComments</label>
+    </div>
+    <br>
+    <div class="form-group">
+         <label for="ideaImage">Upload Feature Image</label>
+         <input type="file" name="ideaImage" id="ideaImage" class="form-control">
     </div>
 
     <button disabled style="display: none;" class="btn btn-primary mt-3" type="submit">Add idea</button>
