--- a/views/users/edit-profile.hbs
+++ b/views/users/edit-profile.hbs
@@ -10,11 +10,11 @@
     </div>
     <div class="col-9 p-4">
         <h3 class="mb-3">Edit Profile</h3>
-        <form action="/users/me?_method=PUT" method="POST">
+        <form action="/users/me?_method=PUT" method="POST" enctype="multipart/form-data">
              <div class="form-group ">
                     <label for="firstName">FirstName</label>
                     <input type="text" name="firstName" id="firstName" class="form-control"
-                    value="{{firstName}}" 
+                    value="{{userInput.firstName}}" 
                     >
                 </div>
                 <div class="form-group ">
@@ -25,8 +25,8 @@
                 </div>
             
             <div class="form-group">
-                <label for="profile">Profile Picture</label>
-                <input type="file" name="profile" id="profile" class="form-control"
+                <label for="profilePic">Profile Picture</label>
+                <input type="file" name="profilePic" id="profilePic" class="form-control"
                 >
            </div>
 
