--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -47,6 +47,7 @@
                     >
                 </div>
             </div>
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <input type="submit" class="btn btn-primary" value="Regisrer">
 
         </form>
