--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -14,10 +14,13 @@
                 <input type="password" name="password" id="password" class="form-control">
             </div>
 
-
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <input type="submit" class="btn btn-primary" value="Login">
 
         </form>
         <a href="/auth/google" class="btn btn-info btn-block mt-2" style="width:200px">Login With Google</a>
+      
+        <a href="/auth/forget-password" class="btn btn-danger btn-block mt-2" style="width:200px">Forget Password</a>
+
     </div>
 </div>
