--- a/views/comments/edit.hbs
+++ b/views/comments/edit.hbs
@@ -7,9 +7,11 @@
                 <input type="text" name="title" class="form-control" placeholder="Title of Your comment" 
                  value="{{comment.title}}">
             </div>
+
             <div class="form-group">
                 <textarea name="text" class="form-control" placeholder="Write more">{{comment.text}}</textarea>
             </div>
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <input type="submit" class="btn btn-primary" value="Update">
         </form>
 
