--- a/views/ideas/edit.hbs
+++ b/views/ideas/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/ideas/{{idea._id}}?_method=PUT" method="POST" enctype="multipart/form-data">
+<form action="/ideas/{{idea._id}}?_method=PUT&_csrf={{csrfToken}}" method="POST" enctype="multipart/form-data">
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" value="{{idea.title}}">
