--- a/views/ideas/show.hbs
+++ b/views/ideas/show.hbs
@@ -47,6 +47,7 @@
     <div style="display: {{compareValues idea.user.id user_id 'btn'}};">
       <a href="/ideas/{{idea._id}}/edit" class="btn btn-primary float-left mr-2 mt-2">Edit</a>
       <form action="/ideas/{{idea._id}}?_method=DELETE" method="POST">
+        <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <button class="btn btn-danger mt-2">Delete</button>
       </form>
     </div>
