--- a/views/partials/_ideas-index.hbs
+++ b/views/partials/_ideas-index.hbs
@@ -1,3 +1,4 @@
+{{#if ideas}}
 {{#each ideas}}
     <div class="card">
       <div class="card-body">
@@ -7,3 +8,7 @@
       </div>
     </div>
 {{/each}}
+{{else}}
+<p>No ideas found</p>
+{{/if}}
+
